fix: update z-index values in ascent filter bar and navigation to be less aggressive

--- a/src/app/_components/ascents-filter-bar/ascent-filter-bar.module.css
+++ b/src/app/_components/ascents-filter-bar/ascent-filter-bar.module.css
@@ -12,7 +12,7 @@
   flex-flow: row wrap;
   justify-content: center;
   gap: var(--size-3);
-  z-index: calc(var(--layer-important) - 1);
+  z-index: var(--layer-2);
   padding-block: var(--size-3);
 }
 
